<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/logo"
        android:layout_weight="3"
        android:padding="30dp"
        android:contentDescription="@string/app_name" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilActivityLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edActivityLoginPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/edActivityLoginPhone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilActivityLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edActivityLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal"
                android:hint="@string/edActivityLoginPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnActivityLoginGetToken"
            android:background="@drawable/btn_green"
            android:id="@+id/btnActivityLoginGetToken"
            android:layout_margin="5dp"

            android:onClick="getToken"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnActivityLoginGetPassword"
            android:background="@drawable/btn_yellow"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/btnActivityLoginGetPassword"
            android:onClick="getPassword"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llActivityLoginProgress">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbActivityLogin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvActivityLoginTimer"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
