<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_share_driver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context="org.toptaxi.taximeter.activities.ShareDriverActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svShareDriver"
        android:layout_above="@+id/llShareDriverButtons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tvShareDriverInfo"
                android:textAlignment="center" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilSharedDriverPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edShareDriverPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/edActivityLoginPhone" />
                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_contacts"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/btnShareDriverPickContact"
                    android:onClick="pickContactClick"/>
            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/llShareDriverButtons">
        <Button
            android:text="@string/btnShareDriverSendSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareDriverCheckPhone"
            android:background="@drawable/btn_round_green"
            android:layout_margin="@dimen/buttons_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="checkPhoneClick"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llShareDriverTimer"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbShareDriver"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvShareDriver"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <Button
            android:text="@string/btnShareDriverSendLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareDriverActivityShare"
            android:background="@drawable/btn_round_green"
            android:layout_margin="@dimen/buttons_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="btnShareClick"/>

    </LinearLayout>



</RelativeLayout>
